--- a/lang/tr.json
+++ b/lang/tr.json
@@ -26,7 +26,15 @@
 	"PF2E.Actions.RecallKnowledge.Notes.criticalFailure": "<strong>Critical Failure</strong> You recall incorrect information or gain an erroneous or misleading clue.",
 	"PF2E.Actions.TumbleThrough.Title": "Havalı Geçiş",
 	"PF2E.Actions.GrabAnEdge.Title": "Kenara Tutun",
+	"PF2E.Actions.GrabAnEdge.Notes.criticalSuccess": "<strong>Critical Success</strong> You grab the edge or handhold, whether or not you have a hand free, typically by using a suitable held item to catch yourself (catching a battle axe on a ledge, for example). You still take damage from the distance fallen so far, but you treat the fall as though it were 30 feet shorter.",
+	"PF2E.Actions.GrabAnEdge.Notes.success": "<strong>Success</strong> If you have at least one hand free, you grab the edge or handhold, stopping your fall. You still take damage from the distance fallen so far, but you treat the fall as though it were 20 feet shorter. If you have no hands free, you continue to fall as if you had failed the check.",
+	"PF2E.Actions.GrabAnEdge.Notes.criticalFailure": "<strong>Critical Failure</strong> You continue to fall, and if you’ve fallen 20 feet or more before you use this reaction, you take 10 bludgeoning damage from the impact for every 20 feet fallen.",
 	"PF2E.Actions.Balance.Title": "Dengeni Sağla",
+	"PF2E.Actions.Climb.Title": "Tırman",
+	"PF2E.Actions.Swim.Title": "Yüz",
+	"PF2E.Actions.HighJump.Title": "Yüksek Atla",
+	"PF2E.Actions.LongJump.Title": "Uzun Atla",
+	"PF2E.Actions.ForceOpen.Title": "Güçle Aç",
 
 	"PF2E.Actions.Step.Title": "Adımla",
 	"PF2E.Actions.Stride.Title": "Koş",
@@ -35,6 +43,11 @@
 	"PF2E.Actions.Leap.Title": "Sıçra",
 	"PF2E.Actions.PointOut.Title": "İşaret Et",
 	"PF2E.Actions.AvertGaze.Title": "Gözünü Kaçır",
+	"PF2E.Actions.Crawl.Title": "Sürün",
+	"PF2E.Actions.Mount.Title": "Bin",
+	"PF2E.Actions.Release.Title": "Bırak",
+	"PF2E.Actions.Ready.Title": "Hazırlan",
+	"PF2E.Actions.Interact.Title": "Etkileş",
 
 	"PF2E.ConditionTypeGrabbed": "Zaptedilmiş",
 	"PF2E.ConditionTypeProne": "Yere Düşmüş",
