Relative conditions panel completed... Many refactorings...

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,24 @@
 {
+    "FOUNDRY.Concept.Actor": "Actor",
+    "FOUNDRY.Concept.Token": "Token",
+    
+    "PF2E.Concept.Awareness.Title": "Awareness",
+    "PF2E.Concept.Awareness.Unnoticed": "Farkedilmemiş",
+    "PF2E.Concept.Awareness.Undetected": "Saptanmamış",
+    "PF2E.Concept.Awareness.Hidden": "Gizli",
+    "PF2E.Concept.Awareness.Observed": "Görülmüş",
+    "PF2E.Concept.Attitude.Title": "Attitude",
+    "PF2E.Concept.Attitude.Hostile": "Düşman",
+    "PF2E.Concept.Attitude.Unfriendly": "Hasmane",
+    "PF2E.Concept.Attitude.Indifferent": "Kayıtsız",
+    "PF2E.Concept.Attitude.Friendly": "Arkadaş",
+    "PF2E.Concept.Attitude.Helpful": "Yardımcı",
+    "PF2E.Concept.Cover.Title": "Cover",
+    "PF2E.Concept.Cover.None": "None",
+    "PF2E.Concept.Cover.Lesser": "Lesser",
+    "PF2E.Concept.Cover.Standard": "Standard",
+    "PF2E.Concept.Cover.Greater": "Greater",
+    
     "PF2E.Actions.Escape.Title": "Escape",
     "PF2E.Actions.Aid.Title": "Aid",
     "PF2E.Actions.TakeCover.Title": "Take Cover",
@@ -6,11 +26,14 @@
     "PF2E.Actions.ReceiveAid.Title": "Receive Aid",
     "PF2E.Actions.RaiseAShield.Title": "Raise a Shield",
     "PF2E.Actions.Prone.Title": "Drop Prone/Stand",
+    "PF2E.Actions.GrabAnEdge.Title": "Grab An Edge",
+    "PF2E.Actions.Perform.Title": "Perform",
     "PF2E.Actions.RecallKnowledge.Title": "Recall Knowledge",
     "PF2E.Actions.RecallKnowledge.Notes.criticalSuccess": "<strong>Critical Success</strong> You recall the knowledge accurately and gain additional information or context.",
     "PF2E.Actions.RecallKnowledge.Notes.success": "<strong>Success</strong> You recall the knowledge accurately or gain a useful clue about your current situation.",
     "PF2E.Actions.RecallKnowledge.Notes.criticalFailure": "<strong>Critical Failure</strong> You recall incorrect information or gain an erroneous or misleading clue.",
     "PF2E.Actions.AdministerFirstAid.Bleeding": "Bleeding",
+    "PF2E.Actions.AdministerFirstAid.Poisoned": "Poisoned",
     "PF2E.Actions.AdministerFirstAid.Dying": "Dying",
 
     "PF2E.Actions.Step.Title": "Step",
@@ -46,6 +69,8 @@
     "PF2E.MKS.UI.Actions.cancel": "Cancel",
     "PF2E.MKS.UI.Actions.ok": "OK",
     "PF2E.MKS.UI.Actions.add": "Add",
+    "PF2E.MKS.UI.Actions.submit": "Submit",
+    "PF2E.MKS.UI.Actions.revert": "Revert",
     "PF2E.MKS.Dialog.SelectOne.Title": "Select One",
     "PF2E.MKS.Dialog.MultipleButtons.Title": "Press One",
     "PF2E.MKS.Warning.Actor.OneMustBeSelected": "You must select exactly one actor!",
