--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,4 +1,24 @@
 {
+	"FOUNDRY.Concept.Actor": "Aktör",
+	"FOUNDRY.Concept.Token": "Pul",
+	
+	"PF2E.Concept.Awareness.Title": "Farkındalık",
+	"PF2E.Concept.Awareness.Unnoticed": "Farkedilmemiş",
+	"PF2E.Concept.Awareness.Undetected": "Saptanmamış",
+	"PF2E.Concept.Awareness.Hidden": "Gizli",
+	"PF2E.Concept.Awareness.Observed": "Görülmüş",
+	"PF2E.Concept.Attitude.Title": "Davranış",
+	"PF2E.Concept.Attitude.Hostile": "Düşman",
+	"PF2E.Concept.Attitude.Unfriendly": "Hasmane",
+	"PF2E.Concept.Attitude.Indifferent": "Kayıtsız",
+	"PF2E.Concept.Attitude.Friendly": "Arkadaş",
+	"PF2E.Concept.Attitude.Helpful": "Yardımcı",
+	"PF2E.Concept.Cover.Title": "Siper",
+	"PF2E.Concept.Cover.None": "Yok",
+	"PF2E.Concept.Cover.Lesser": "Küçük",
+	"PF2E.Concept.Cover.Standard": "Standart",
+	"PF2E.Concept.Cover.Greater": "Büyük",
+	
 	"PF2E.BonusLabel.untyped": "Genel",
 	"PF2E.BonusLabel.status": "Durum",
 	"PF2E.BonusLabel.circumstance": "Koşul",
@@ -40,8 +60,14 @@
 	"PF2E.Actions.CreateADiversion.DistractingWords": "Oyalayıcı Sözler",
 	"PF2E.Actions.AdministerFirstAid.Title": "İlkyardım",
 	"PF2E.Actions.AdministerFirstAid.Bleeding": "Kanama",
+	"PF2E.Actions.AdministerFirstAid.Poisoned": "Zehirlenme",
 	"PF2E.Actions.AdministerFirstAid.Dying": "Ölüm Hali",
-
+	"PF2E.Actions.Demoralize.Title": "Moral Boz",
+	"PF2E.Actions.Feint.Title": "Feyk At",
+	"PF2E.Actions.Request.Title": "İstekte Bulun",
+	"PF2E.Actions.CommandAnAnimal.Title": "Hayvana Emret",
+	"PF2E.Actions.Perform.Title": "Performans Sergile",
+	"PF2E.Actions.ConcealAnObject.Title": "Obje Gizle",
 	"PF2E.Actions.Step.Title": "Adımla",
 	"PF2E.Actions.Stride.Title": "Koş",
 	"PF2E.Actions.SustainASpell.Title": "Büyüyü Sürdür",
@@ -106,9 +132,12 @@
 	"PF2E.MKS.UI.Actions.add": "Ekle",
 	"PF2E.MKS.UI.Actions.ok": "Tamam",
 	"PF2E.MKS.UI.Actions.cancel": "İptal",
+	"PF2E.MKS.UI.Actions.submit": "Uygula",
+	"PF2E.MKS.UI.Actions.revert": "Geri Al",
 	"PF2E.MKS.Dialog.SelectOne.Title": "Seçiniz",
 	"PF2E.MKS.Dialog.MultipleButtons.Title": "Seçiniz",
 	"PF2E.MKS.UI.ActionsPanel.Label": "Aksiyonlar",
+	"PF2E.MKS.UI.RelativeCondPanel.Label": "Göreli Durumlar",
 	"PF2E.MKS.Warning.Actor.OneMustBeSelected": "Bir piyon seçmelisiniz!",
 	"PF2E.MKS.Warning.Actor.AtLeastOneMustBeSelected": "En az bir piyon seçmelisiniz!",
 	"PF2E.MKS.Warning.Target.OneMustBeSelected": "Bir piyon hedeflemelisiniz!",
