Encounter action impl. completed

--- a/lang/en.json
+++ b/lang/en.json
@@ -2,6 +2,7 @@
     "FOUNDRY.Concept.Actor": "Actor",
     "FOUNDRY.Concept.Token": "Token",
     
+    "PF2E.Concept.DC": "DC",
     "PF2E.Concept.Awareness.Title": "Awareness",
     "PF2E.Concept.Awareness.Unnoticed": "Farkedilmemiş",
     "PF2E.Concept.Awareness.Undetected": "Saptanmamış",
@@ -19,10 +20,13 @@
     "PF2E.Concept.Cover.Standard": "Standard",
     "PF2E.Concept.Cover.Greater": "Greater",
     
+    "PF2E.Actions.ConcealAnObject.Title": "Conceal An Object",
+    "PF2E.Actions.CreateADiversion.Title": "Create a Diversion",
+    "PF2E.Actions.CreateADiversion.TrickGesture": "Trick/Gesture",
+    "PF2E.Actions.CreateADiversion.DistractingWords": "Distracting Words",
     "PF2E.Actions.Escape.Title": "Escape",
     "PF2E.Actions.Aid.Title": "Aid",
     "PF2E.Actions.TakeCover.Title": "Take Cover",
-    "PF2E.Actions.GiveCover.Title": "Give Cover",
     "PF2E.Actions.ReceiveAid.Title": "Receive Aid",
     "PF2E.Actions.RaiseAShield.Title": "Raise a Shield",
     "PF2E.Actions.Prone.Title": "Drop Prone/Stand",
@@ -35,6 +39,9 @@
     "PF2E.Actions.AdministerFirstAid.Bleeding": "Bleeding",
     "PF2E.Actions.AdministerFirstAid.Poisoned": "Poisoned",
     "PF2E.Actions.AdministerFirstAid.Dying": "Dying",
+    "PF2E.Actions.DisableADevice.Title": "Disable a Device",
+    "PF2E.Actions.PalmAnObject.Title": "Palm an Object",
+    "PF2E.Actions.Steal.Title": "Steal",
 
     "PF2E.Actions.Step.Title": "Step",
     "PF2E.Actions.Stride.Title": "Stride",
@@ -64,19 +71,20 @@
 
     "PF2E.MKS.Modifier.partially-disarmed": "Loose Grip",
 
-    "PF2E.MKS.DC": "DC",
-    "PF2E.MKS.UI.ActionsPanel.Label": "Action Panel",
     "PF2E.MKS.UI.Actions.cancel": "Cancel",
     "PF2E.MKS.UI.Actions.ok": "OK",
     "PF2E.MKS.UI.Actions.add": "Add",
     "PF2E.MKS.UI.Actions.submit": "Submit",
     "PF2E.MKS.UI.Actions.revert": "Revert",
+    "PF2E.MKS.UI.ActionsPanel.Label": "Action Panel",
+    "PF2E.MKS.UI.RelativeCondPanel.Label": "Relative Conditions",
     "PF2E.MKS.Dialog.SelectOne.Title": "Select One",
     "PF2E.MKS.Dialog.MultipleButtons.Title": "Press One",
     "PF2E.MKS.Warning.Actor.OneMustBeSelected": "You must select exactly one actor!",
     "PF2E.MKS.Warning.Actor.AtLeastOneMustBeSelected": "You must select at least one actor!",
     "PF2E.MKS.Warning.Target.OneMustBeSelected": "You must target exactly one token!",
     "PF2E.MKS.Warning.Target.AtLeastOneMustBeSelected": "You must target at least one token!",
+    "PF2E.MKS.Warning.Encounter.NoneExists": "No encounter found.",
     "pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
     "pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
     "pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Spell Attack",
