--- a/lang/tr.json
+++ b/lang/tr.json
@@ -2,6 +2,7 @@
 	"FOUNDRY.Concept.Actor": "Aktör",
 	"FOUNDRY.Concept.Token": "Pul",
 	
+	"PF2E.Concept.DC": "DC",
 	"PF2E.Concept.Awareness.Title": "Farkındalık",
 	"PF2E.Concept.Awareness.Unnoticed": "Farkedilmemiş",
 	"PF2E.Concept.Awareness.Undetected": "Saptanmamış",
@@ -25,62 +26,66 @@
 	"PF2E.BonusLabel.item": "Item",
 	"PF2E.BonusLabel.ability": "Yetenek",
 	"PF2E.BonusLabel.proficiency": "Ustalık",
-
-	"PF2E.Actions.Grapple.Title": "Cebelleş",
-	"PF2E.Actions.Disarm.Title": "Elinden Düşür",
-	"PF2E.Actions.Shove.Title": "İtekle",
-	"PF2E.Actions.Trip.Title": "Çelme At",
-	"PF2E.Actions.Seek.Title": "Ara/Tara",
-	"PF2E.Actions.Escape.Title": "Kurtul",
+	
 	"PF2E.Actions.Aid.Title": "Yardım Et",
-	"PF2E.Actions.TakeCover.Title": "Siper Al",
-	"PF2E.Actions.GiveCover.Title": "Siper Ver",
-	"PF2E.Actions.Prone.Title": "Yere Yat/Kalk",
-	"PF2E.Actions.SenseMotive.Title": "Niyet Anla",
-	"PF2E.Actions.ReceiveAid.Title": "Yardım Al",
-	"PF2E.Actions.RaiseAShield.Title": "Kalkan Kaldır",
-	"PF2E.Actions.RaiseAShield.SingleActionTitle": "Kalkan Kaldır",
-	"PF2E.Actions.RecallKnowledge.Title": "Anımsa",
-	"PF2E.Actions.RecallKnowledge.Notes.criticalSuccess": "<strong>Critical Success</strong> You recall the knowledge accurately and gain additional information or context.",
-	"PF2E.Actions.RecallKnowledge.Notes.success": "<strong>Success</strong> You recall the knowledge accurately or gain a useful clue about your current situation.",
-	"PF2E.Actions.RecallKnowledge.Notes.criticalFailure": "<strong>Critical Failure</strong> You recall incorrect information or gain an erroneous or misleading clue.",
-	"PF2E.Actions.TumbleThrough.Title": "Havalı Geçiş",
-	"PF2E.Actions.GrabAnEdge.Title": "Kenara Tutun",
-	"PF2E.Actions.GrabAnEdge.Notes.criticalSuccess": "<strong>Critical Success</strong> You grab the edge or handhold, whether or not you have a hand free, typically by using a suitable held item to catch yourself (catching a battle axe on a ledge, for example). You still take damage from the distance fallen so far, but you treat the fall as though it were 30 feet shorter.",
-	"PF2E.Actions.GrabAnEdge.Notes.success": "<strong>Success</strong> If you have at least one hand free, you grab the edge or handhold, stopping your fall. You still take damage from the distance fallen so far, but you treat the fall as though it were 20 feet shorter. If you have no hands free, you continue to fall as if you had failed the check.",
-	"PF2E.Actions.GrabAnEdge.Notes.criticalFailure": "<strong>Critical Failure</strong> You continue to fall, and if you’ve fallen 20 feet or more before you use this reaction, you take 10 bludgeoning damage from the impact for every 20 feet fallen.",
-	"PF2E.Actions.Balance.Title": "Dengeni Sağla",
-	"PF2E.Actions.Climb.Title": "Tırman",
-	"PF2E.Actions.Swim.Title": "Yüz",
-	"PF2E.Actions.HighJump.Title": "Yüksek Atla",
-	"PF2E.Actions.LongJump.Title": "Uzun Atla",
-	"PF2E.Actions.ForceOpen.Title": "Güçle Aç",
-	"PF2E.Actions.CreateADiversion.Title": "Dikkat Dağıt",
-	"PF2E.Actions.CreateADiversion.TrickGesture": "Numara Çek",
-	"PF2E.Actions.CreateADiversion.DistractingWords": "Oyalayıcı Sözler",
 	"PF2E.Actions.AdministerFirstAid.Title": "İlkyardım",
 	"PF2E.Actions.AdministerFirstAid.Bleeding": "Kanama",
 	"PF2E.Actions.AdministerFirstAid.Poisoned": "Zehirlenme",
 	"PF2E.Actions.AdministerFirstAid.Dying": "Ölüm Hali",
-	"PF2E.Actions.Demoralize.Title": "Moral Boz",
-	"PF2E.Actions.Feint.Title": "Feyk At",
-	"PF2E.Actions.Request.Title": "İstekte Bulun",
+	"PF2E.Actions.AvertGaze.Title": "Gözünü Kaçır",
+	"PF2E.Actions.Balance.Title": "Dengeni Sağla",
 	"PF2E.Actions.CommandAnAnimal.Title": "Hayvana Emret",
-	"PF2E.Actions.Perform.Title": "Performans Sergile",
+	"PF2E.Actions.Climb.Title": "Tırman",
+	"PF2E.Actions.CreateADiversion.Title": "Dikkat Dağıt",
+	"PF2E.Actions.CreateADiversion.TrickGesture": "Numara Çek",
+	"PF2E.Actions.CreateADiversion.DistractingWords": "Oyalayıcı Sözler",
+	"PF2E.Actions.Crawl.Title": "Sürün",
 	"PF2E.Actions.ConcealAnObject.Title": "Obje Gizle",
+	"PF2E.Actions.Demoralize.Title": "Moral Boz",
+	"PF2E.Actions.DisableADevice.Title": "Cihazı İptal Et",
+	"PF2E.Actions.Disarm.Title": "Elinden Düşür",
+	"PF2E.Actions.Escape.Title": "Kurtul",
+	"PF2E.Actions.Feint.Title": "Feyk At",
+	"PF2E.Actions.ForceOpen.Title": "Güçle Aç",
+	"PF2E.Actions.GrabAnEdge.Title": "Kenara Tutun",
+	"PF2E.Actions.GrabAnEdge.Notes.criticalSuccess": "<strong>Critical Success</strong> You grab the edge or handhold, whether or not you have a hand free, typically by using a suitable held item to catch yourself (catching a battle axe on a ledge, for example). You still take damage from the distance fallen so far, but you treat the fall as though it were 30 feet shorter.",
+	"PF2E.Actions.GrabAnEdge.Notes.success": "<strong>Success</strong> If you have at least one hand free, you grab the edge or handhold, stopping your fall. You still take damage from the distance fallen so far, but you treat the fall as though it were 20 feet shorter. If you have no hands free, you continue to fall as if you had failed the check.",
+	"PF2E.Actions.GrabAnEdge.Notes.criticalFailure": "<strong>Critical Failure</strong> You continue to fall, and if you’ve fallen 20 feet or more before you use this reaction, you take 10 bludgeoning damage from the impact for every 20 feet fallen.",
+	"PF2E.Actions.Grapple.Title": "Cebelleş",
+	"PF2E.Actions.Hide.Title": "Gizlen",
+	"PF2E.Actions.HighJump.Title": "Yüksek Atla",
+	"PF2E.Actions.Interact.Title": "Etkileş",
+	"PF2E.Actions.Leap.Title": "Sıçra",
+	"PF2E.Actions.Lie.Title": "Yalan Söyle",
+	"PF2E.Actions.LongJump.Title": "Uzun Atla",
+	"PF2E.Actions.Mount.Title": "Bin",
+	"PF2E.Actions.PalmAnObject.Title": "Nesneyi Aşır",
+	"PF2E.Actions.Perform.Title": "Performans Sergile",
+	"PF2E.Actions.PointOut.Title": "İşaret Et",
+	"PF2E.Actions.Prone.Title": "Yere Yat/Kalk",
+	"PF2E.Actions.RaiseAShield.Title": "Kalkan Kaldır",
+	"PF2E.Actions.RaiseAShield.SingleActionTitle": "Kalkan Kaldır",
+	"PF2E.Actions.Ready.Title": "Hazırlan",
+	"PF2E.Actions.RecallKnowledge.Title": "Anımsa",
+	"PF2E.Actions.RecallKnowledge.Notes.criticalSuccess": "<strong>Critical Success</strong> You recall the knowledge accurately and gain additional information or context.",
+	"PF2E.Actions.RecallKnowledge.Notes.success": "<strong>Success</strong> You recall the knowledge accurately or gain a useful clue about your current situation.",
+	"PF2E.Actions.RecallKnowledge.Notes.criticalFailure": "<strong>Critical Failure</strong> You recall incorrect information or gain an erroneous or misleading clue.",
+	"PF2E.Actions.ReceiveAid.Title": "Yardım Al",
+	"PF2E.Actions.Release.Title": "Bırak",
+	"PF2E.Actions.Request.Title": "İstekte Bulun",
+	"PF2E.Actions.Shove.Title": "İtekle",
+	"PF2E.Actions.Seek.Title": "Ara/Tara",
+	"PF2E.Actions.SenseMotive.Title": "Niyet Anla",
+	"PF2E.Actions.Sneak.Title": "Sinsice Dolaş",
+	"PF2E.Actions.Steal.Title": "Hırsızla",
 	"PF2E.Actions.Step.Title": "Adımla",
 	"PF2E.Actions.Stride.Title": "Koş",
 	"PF2E.Actions.SustainASpell.Title": "Büyüyü Sürdür",
 	"PF2E.Actions.SustainAnActivation.Title": "Aktivasyonu Sürdür",
-	"PF2E.Actions.Leap.Title": "Sıçra",
-	"PF2E.Actions.PointOut.Title": "İşaret Et",
-	"PF2E.Actions.AvertGaze.Title": "Gözünü Kaçır",
-	"PF2E.Actions.Crawl.Title": "Sürün",
-	"PF2E.Actions.Mount.Title": "Bin",
-	"PF2E.Actions.Release.Title": "Bırak",
-	"PF2E.Actions.Ready.Title": "Hazırlan",
-	"PF2E.Actions.Interact.Title": "Etkileş",
-	"PF2E.Actions.Hide.Title": "Gizlen",
+	"PF2E.Actions.Swim.Title": "Yüz",
+	"PF2E.Actions.TakeCover.Title": "Siper Al",
+	"PF2E.Actions.Trip.Title": "Çelme At",
+	"PF2E.Actions.TumbleThrough.Title": "Havalı Geçiş",
 
 	"PF2E.ConditionTypeGrabbed": "Zaptedilmiş",
 	"PF2E.ConditionTypeProne": "Yere Düşmüş",
@@ -125,7 +130,7 @@
   	"PF2E.ActionTag.social": "Sosyal",
   	"PF2E.ActionTag.stealth": "Gizlilik",
   	"PF2E.ActionTag.rudimentary": "Temel",
-
+	
 	"PF2E.MKS.ActionsPanel.ShowApplicable": "Uygun Olanlar",
 	"PF2E.MKS.ActionsPanel.InCombatTurn":   "Savaşta Sıradaki",
 
@@ -143,6 +148,7 @@
 	"PF2E.MKS.Warning.Actor.AtLeastOneMustBeSelected": "En az bir piyon seçmelisiniz!",
 	"PF2E.MKS.Warning.Target.OneMustBeSelected": "Bir piyon hedeflemelisiniz!",
 	"PF2E.MKS.Warning.Target.AtLeastOneMustBeSelected": "En az bir piyon hedeflemelisiniz!",
+	"PF2E.MKS.Warning.Encounter.NoneExists": "Mücadelede değilsiniz.",
 	"pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
 	"pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Algı Atışı",
 	"pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Büyü Atağı",
